--- a/costofliving.html
+++ b/costofliving.html
@@ -34,7 +34,10 @@
 											<article>
 												<h2>South Korea</h2>
 												<ul>
-													<li></li>
+													<li>Annual Household Income per Capita: $16,567.175 USD (2018)</li>
+													<li>Rent per month (1 Bedroom Apartment in city centre): $552.04 USD</li>
+													<li>Price per square foot to buy Apartment (in city centre): $897.23 USD</li>
+													<li>Internet (60 Mbps or More, Unlimited Data, Cable/ADSL): $22.07 USD</li>
 												</ul>
 												<span class="object">
 													<img src="images/" alt="" />
@@ -43,7 +46,10 @@
 											<article>
 												<h2>United States</h2>
 												<ul>
-													<li></li>
+													<li>Annual Household Income per Capita: $29,429.200 USD (2017)</li>
+													<li>Rent per month (1 Bedroom Apartment in city centre): $1,263.71 USD</li>
+													<li>Price per square foot to buy Apartment (in city centre): $238.76 USD</li>
+													<li>Internet (60 Mbps or More, Unlimited Data, Cable/ADSL): $62.50 USD</li>
 												</ul>
 												<span class="object">
 														<img src="images/" alt="" />
