--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 										<div class="posts">
 											<article>
 												<h2>South Korea 대한민국 (한국)</h2>
+												<span class="object">
+													<img src="images/krflag.png" alt="" />
+												</span>
 												<ul>
 													<li>Location: Eastern Asia</li>
 													<li>Southern part of Korean Peninsula</li>
@@ -44,6 +47,9 @@
 											</article>
 											<article>
 												<h2>United States 미국</h2>
+												<span class="object">
+													<img src="images/krflag.png" alt="" />
+												</span>
 												<ul>
 													<li>Location: North America</li>
 													<li>Bordered by Canada to the north and Mexico to the south</li>
