--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 											<article>
 												<h2>United States 미국</h2>
 												<span class="object">
-													<img src="images/krflag.png" alt="" />
+													<img src="images/usflag.png" alt="" />
 												</span>
 												<ul>
 													<li>Location: North America</li>
