--- a/people.html
+++ b/people.html
@@ -47,7 +47,7 @@
 											<li>Obesity: 36.2% (2016)</li>
 										</ul>
 									</div>
-									<span class="image object left">
+									<span class="image object">
 											<img src="images/peopleinstreet.png" alt="" />
 									</span>
 								</section>
