--- a/facts.html
+++ b/facts.html
@@ -32,9 +32,9 @@
 										</header>
 												<h2>South Korea</h2>
 												<ul>
-													<li></li>
-													<li></li>
-													<li>South Korea is the plastic surgery capital of the world</li>
+													<li>Along with Tokyo residents, Seoulites get the least amount of sleep of any residents of major cities in the world, just fewer than 6 hours a night.</li>
+													<li>The Mugunghwa (Rose of Sharon) is South Korea’s national flower. It is a type of hibiscus and is represented in the national anthem. It is a symbol to the Koreans of the glories and adversities of their past.</li>
+													<li>In the 15th century, King Sejong the Great decided to develop a new writing system, Hangul</li>
 												</ul>
 											</div>
 									<span class="object">
