--- a/energy.html
+++ b/energy.html
@@ -51,8 +51,8 @@
 												</ul>
 												
 									</div>
-									<span class="object">
-														<img src="images/" alt="" />
+									<span class="image object">
+										<img src="images/krenergy.jpg" alt="" />
 									</span>
 								</section>
 
