--- a/transportation.html
+++ b/transportation.html
@@ -46,8 +46,8 @@
 												</ul>
 												
 									</div>
-									<span class="object">
-										<img src="images/" alt="" />
+									<span class="image object">
+										<img src="images/krtransportation.jpg" alt="" />
 									</span>
 								</section>
 
