--- a/communication.html
+++ b/communication.html
@@ -52,9 +52,9 @@
 												</ul>
 												
 									</div>
-									<span class="object">
-														<img src="images/" alt="" />
-												</span>
+									<span class="image object">
+										<img src="images/krcommunication.jpg" alt="" />
+									</span>
 								</section>
 
 						</div>
