--- a/economy.html
+++ b/economy.html
@@ -32,7 +32,7 @@
 										</header>
 										<div class="posts">
 											<article>
-												<h2>South Korea</h2>
+												<h2>South Korea (₩)</h2>
 												<ul>
 													<li>GDP: $2.035 trillion (2017 est.)</li>
 													<li>GDP per capita: $39,500 (2017 est.)</li>
@@ -44,7 +44,7 @@
 												</span>
 											</article>
 											<article>
-												<h2>United States</h2>
+												<h2>United States ($)</h2>
 												<ul>
 													<li>GDP: $19.49 trillion (2017 est.)</li>
 													<li>GDP per capita: $59,800 (2017 est.)</li>
