--- a/transportation.html
+++ b/transportation.html
@@ -39,7 +39,7 @@
 												</ul>
 												<h2>United States</h2>
 												<ul>
-													<li>Airports: 13,513</li>
+													<li>Airports: 13,513 (2013)</li>
 													<li>Railways: 293,564 km (2014)</li>
 													<li>Roadways: 6,586,610 km (2012)</li>
 													<li>Waterways: 41,009 km (2012)</li>
