--- a/facts.html
+++ b/facts.html
@@ -33,12 +33,12 @@
 												<h2>South Korea</h2>
 												<ul>
 													<li>Along with Tokyo residents, Seoulites get the least amount of sleep of any residents of major cities in the world, just fewer than 6 hours a night.</li>
-													<li>The Mugunghwa (Rose of Sharon) is South Korea’s national flower. It is a type of hibiscus and is represented in the national anthem. It is a symbol to the Koreans of the glories and adversities of their past.</li>
-													<li>In the 15th century, King Sejong the Great decided to develop a new writing system, Hangul</li>
+													<li>The Mugunghwa (Rose of Sharon 무궁화) is South Korea’s national flower. It is a type of hibiscus and is represented in the national anthem. It is a symbol to the Koreans of the glories and adversities of their past.</li>
+													<li>In the 15th century, King Sejong the Great decided to develop a new writing system, Hangul (한글)</li>
 												</ul>
 											</div>
-									<span class="object">
-										<img src="images/" alt="" />
+									<span class="image object">
+										<img src="images/krfacts.jpg" alt="" />
 									</span>
 								</section>
 
