--- a/economy.html
+++ b/economy.html
@@ -91,6 +91,7 @@
 										<li><a href="energy.html">Energy</a></li>
 										<li><a href="transportation.html">Transportation</a></li>
 										<li><a href="facts.html">Interesting Facts</a></li>
+										<li><a href="food.html">Samgak Gimbap 삼각김밥</a></li>
 									</ul>
 								</nav>
 
