--- a/facts.html
+++ b/facts.html
@@ -20,7 +20,7 @@
 									<a href="index.html" class="logo"><strong>South Korea Country Project</strong> - Interesting Facts</a>
 									<ul class="icons">
 										<li><a href="transportation.html" class="icon fa-arrow-left"><span class="label"></span></a></li>
-										<li><a href="" class="icon fa-arrow-right"><span class="label"></span></a></li>
+										<li><a href="food.html" class="icon fa-arrow-right"><span class="label"></span></a></li>
 									</ul>
 								</header>
 
