--- a/food.html
+++ b/food.html
@@ -19,8 +19,8 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>South Korea Country Project</strong> - Food</a>
 									<ul class="icons">
-										<li><a href="military.html" class="icon fa-arrow-left"><span class="label"></span></a></li>
-										<li><a href="energy.html" class="icon fa-arrow-right"><span class="label"></span></a></li>
+										<li><a href="facts.html" class="icon fa-arrow-left"><span class="label"></span></a></li>
+										<!--<li><a href="" class="icon fa-arrow-right"><span class="label"></span></a></li>-->
 									</ul>
 								</header>
 
